--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,13 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta
-      name="description"
-      content="React minesweeper game built with React"
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
     />
+    <meta name="theme-color" content="#333333" />
+    <meta name="description" content="Minesweeper game built with React" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +26,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Minesweeper</title>
+
+    <title>Minesweeperr</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
